[package]
name = "rktrl"
version = "0.1.0"
authors = ["Zoltán Nagy <abesto@abesto.net>"]
edition = "2018"

[dependencies]
shred = { version = "0.10.2", default-features = false, features = ["shred-derive"] }
specs = { version = "0.16.1", default-features = false, features = ["wasm-bindgen", "serde"] }
bracket-lib = { version = "0.8.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.112", features = ["derive"] }
shred-derive = "0.6.2"
serde_json = "1.0.55"
auto_ops = "0.1.0"
newtype_derive = "0.1.6"
macro-attr = "0.2.0"
smallvec = "1.4.0"
strum = "0.18.0"
strum_macros = "0.18.0"
rand = "0.7.3"
bracket-terminal = "0.8.1"
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
rktrl_macros = { path = "rktrl_macros" }

[[bin]]
name = "rktrl"
path = "src/main.rs"

[lib]
name = "rktrl_lib"
crate-type = ["cdylib", "rlib"]
