[package]
name = "rktrl"
version = "0.1.0"
authors = ["Zoltán Nagy <abesto@abesto.net>"]
edition = "2018"

[features]
default = []
wizard-mode = []
visualize-mapgen = []

[dependencies]
bracket-lib = { version = "0.8.1", features = ["serde"] }
auto_ops = "0.1.0"
newtype_derive = "0.1.6"
macro-attr = "0.2.0"
smallvec = "1.4.2"
strum = "0.20.0"
strum_macros = "0.20.1"
bracket-terminal = "0.8.1"
console_error_panic_hook = "0.1.6"
flate2 = "1.0.19"
base64 = "0.13.0"
legion = { version = "0.3.1", default-features = false, features = ["codegen", "serialize"] }
# TODO swap to upstream once `wasm` branch is merged
legion_typeuuid = { git = "https://github.com/abesto/legion_typeuuid", branch = "wasm", default-features = false, features = ["type-uuid"] }
bincode = "1.3.1"
lazy_static = "1.4.0"
crossbeam-queue = "0.3.1"
petgraph = "0.5.1"
paste = "1.0.4"
# Transitive dependencies that are also used directly. Extra care needed to keep versions synced up.
rand = "0.7.3"
serde = "1.0.118"
type-uuid = "0.1.2"
itertools = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.46", features = ["Storage"] }
wasm-bindgen = "0.2.68"
legion = { version = "0.3.1", default-features = false, features = ["codegen", "serialize", "wasm-bindgen"] }

[patch.crates-io]
# Needed until https://github.com/thebracket/bracket-lib/pull/130 (Fix modifier keys) is released
bracket-terminal = { git = "https://github.com/abesto/bracket-lib/", rev = "abad58f65127bd735573323cd96139ebdb479863" }

[[bin]]
name = "rktrl"
path = "src/main.rs"

[lib]
name = "rktrl_lib"
crate-type = ["cdylib", "rlib"]
